--- a/src/sys/arch/mvme68k/conf/Makefile.mvme68k
+++ b/src/sys/arch/mvme68k/conf/Makefile.mvme68k
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.mvme68k,v 1.65 2011/11/08 18:41:34 matthieu Exp $
+#	$OpenBSD: Makefile.mvme68k,v 1.66 2013/02/02 13:36:05 miod Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -21,7 +21,7 @@ S!=	cd ../../../..; pwd
 _machdir?=	$S/arch/${_mach}
 _archdir?=	$S/arch/${_arch}
 
-INCLUDES=	-nostdinc -I. -I$S -I$S/arch
+INCLUDES=	-nostdinc -I$S -I. -I$S/arch
 CPPFLAGS=	${INCLUDES} ${IDENT} ${PARAM} -D_KERNEL -D__${_mach}__ -MD -MP
 CWARNFLAGS=	-Werror -Wall -Wstrict-prototypes -Wmissing-prototypes \
 		-Wno-main -Wno-uninitialized -Wno-format \
