--- a/src/etc/etc.octeon/Makefile.inc
+++ b/src/etc/etc.octeon/Makefile.inc
@@ -1,6 +1,6 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile.inc,v 1.1 2013/03/26 17:58:11 jasper Exp $
 
 bootblocks:
-	cp ${DESTDIR}/usr/mdec/boot ${RELEASEDIR}/boot
+	# None yet.
 
 MDEXT=	bsd.rd
