--- a/src/sys/arch/loongson/conf/Makefile.loongson
+++ b/src/sys/arch/loongson/conf/Makefile.loongson
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.loongson,v 1.35 2012/08/28 21:03:32 pascal Exp $
+#	$OpenBSD: Makefile.loongson,v 1.36 2013/03/30 07:25:20 tedu Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -34,7 +34,7 @@ CWARNFLAGS=	-Werror -Wall -Wstrict-prototypes -Wmissing-prototypes \
 		-Wno-main -Wno-uninitialized -Wno-format \
 		-Wstack-larger-than-2047
 
-CMACHFLAGS=	-mno-abicalls ${ABI} -msoft-float -Wa,-mfix-loongson2f-btb
+CMACHFLAGS=	-mno-abicalls ${ABI} -msoft-float -Wa,-mfix-loongson2f-btb -G 0
 CMACHFLAGS+=	-fno-builtin-printf -fno-builtin-snprintf \
 		-fno-builtin-vsnprintf -fno-builtin-log \
 		-fno-builtin-log2 -fno-builtin-malloc ${NOPIE_FLAGS}
