--- a/src/sys/kern/syscalls.conf
+++ b/src/sys/kern/syscalls.conf
@@ -1,10 +1,14 @@
-#	$OpenBSD: syscalls.conf,v 1.15 2012/06/21 00:56:59 guenther Exp $
+#	$OpenBSD: syscalls.conf,v 1.16 2013/04/15 15:32:19 jsing Exp $
 #	$NetBSD: syscalls.conf,v 1.2 1994/10/26 06:45:57 cgd Exp $
 
 sysnames="syscalls.c"
 sysnumhdr="../sys/syscall.h"
 syssw="init_sysent.c"
 sysarghdr="../sys/syscallargs.h"
+
+# Any additions to the next line for options that are required for the
+# (new) kernel to boot an existing userland must be coordinated with
+# the snapshot builders
 compatopts="compat_o51 compat_o53"
 libcompatopts=""
 
