--- a/src/usr.sbin/sliplogin/Makefile
+++ b/src/usr.sbin/sliplogin/Makefile
@@ -1,7 +1,9 @@
-#	$OpenBSD: Makefile,v 1.5 2002/05/19 09:40:23 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.6 2004/01/24 18:43:22 deraadt Exp $
 
 PROG=	sliplogin
 MAN=	sliplogin.8
+MLINKS=	sliplogin.8 slip.hosts.5 \
+	sliplogin.8 slip.login.5
 FILES=	slip.hosts slip.login
 BINOWN=	root
 BINGRP=	network
