--- a/src/etc/inetd.conf
+++ b/src/etc/inetd.conf
@@ -1,4 +1,4 @@
-#	$OpenBSD: inetd.conf,v 1.60 2012/03/05 11:28:38 dlg Exp $
+#	$OpenBSD: inetd.conf,v 1.61 2013/03/11 18:45:42 deraadt Exp $
 #
 # Internet server configuration database
 #
@@ -28,8 +28,8 @@
 #chargen	stream	tcp6	nowait	root	internal
 daytime		stream	tcp	nowait	root	internal
 daytime		stream	tcp6	nowait	root	internal
-time		stream	tcp	nowait	root	internal
-time		stream	tcp6	nowait	root	internal
+#time		stream	tcp	nowait	root	internal
+#time		stream	tcp6	nowait	root	internal
 #echo		dgram	udp	wait	root	internal
 #echo		dgram	udp6	wait	root	internal
 #discard	dgram	udp	wait	root	internal
