--- a/src/sbin/umount/Makefile
+++ b/src/sbin/umount/Makefile
@@ -1,6 +1,9 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:38:25 deraadt Exp $
 
 PROG=	umount
 MAN=	umount.8
+
+DPADD+=	${LIBUTIL}
+LDADD+=	-lutil
 
 .include <bsd.prog.mk>
