--- a/src/sys/arch/mvme88k/stand/Makefile
+++ b/src/sys/arch/mvme88k/stand/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: Makefile,v 1.6 2004/01/26 19:48:31 miod Exp $
+#	$OpenBSD: Makefile,v 1.7 2004/01/28 08:46:29 miod Exp $
 
 .if ${MACHINE} == "mvme88k"
-SUBDIR=  bugcrt libbug libsa libz wrtvid bootsd bootxx bootst netboot tftpboot
-# not really written yet...
-# SUBDIR+=	sboot
+SUBDIR=  bugcrt libbug libsa libz
+SUBDIR+= bootxx bootsd wrtvid bootst
+SUBDIR+= netboot sboot tftpboot
 .endif
 
 SUBDIR+=installboot
