--- a/src/etc/etc.mvme88k/Makefile.inc
+++ b/src/etc/etc.mvme88k/Makefile.inc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.inc,v 1.14 2011/07/22 09:30:54 espie Exp $
+#	$OpenBSD: Makefile.inc,v 1.15 2011/07/30 05:38:41 miod Exp $
 
 KERNELS += GENERIC.MP bsd.mp
 
@@ -6,4 +6,4 @@ bootblocks:
 	cp ${DESTDIR}/usr/mdec/* ${RELEASEDIR}/
 
 MDEXT=	bsd.rd \
-	bootsd bootst bootxx installboot netboot stboot tftpboot
+	bootsd bootst bootxx installboot netboot sboot stboot tftpboot
