--- a/src/gnu/usr.bin/texinfo/info/Makefile.in
+++ b/src/gnu/usr.bin/texinfo/info/Makefile.in
@@ -572,8 +572,8 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am
 
 # We need a linear ordering to prevent race condition in parallel make.
 # See the node ``(automake)Multiple Outputs'' for an explanation.
-doc.c: key.c
-key.c: funs.h
+key.c: doc.c
+doc.c: funs.h
 
 # The $(EXEEXT) should be added by Automake, but isn't. Fine.
 $(generated_sources): makedoc$(EXEEXT) $(cmd_sources)
