--- a/src/usr.bin/mg/Makefile
+++ b/src/usr.bin/mg/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.26 2012/06/07 15:15:04 lum Exp $
+# $OpenBSD: Makefile,v 1.27 2012/06/18 07:13:26 jasper Exp $
 
 PROG=	mg
 
@@ -15,7 +15,7 @@ DPADD+=	${LIBCURSES} ${LIBUTIL}
 #
 CFLAGS+=-Wall -DFKEYS -DREGEX -DXKEYS
 
-SRCS=	autoexec.c basic.c buffer.c cinfo.c dir.c display.c \
+SRCS=	autoexec.c basic.c bell.c buffer.c cinfo.c dir.c display.c \
 	echo.c extend.c file.c fileio.c funmap.c help.c kbd.c keymap.c \
 	line.c macro.c main.c match.c modes.c paragraph.c random.c \
 	re_search.c region.c search.c spawn.c tty.c ttyio.c ttykbd.c \
