--- a/src/sys/arch/beagle/conf/Makefile.beagle
+++ b/src/sys/arch/beagle/conf/Makefile.beagle
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.beagle,v 1.41 2013/03/30 07:25:20 tedu Exp $
+#	$OpenBSD: Makefile.beagle,v 1.42 2013/04/30 13:57:02 patrick Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -27,7 +27,7 @@ CWARNFLAGS=	-Werror -Wall -Wstrict-prototypes -Wmissing-prototypes \
 		-Wno-main -Wno-uninitialized -Wno-format \
 		-Wstack-larger-than-2047
 
-CMACHFLAGS=	-ffreestanding -msoft-float # -march=armv4 -mtune=strongarm
+CMACHFLAGS=	-ffreestanding -msoft-float -march=armv6
 CMACHFLAGS+=	-fno-builtin-printf -fno-builtin-snprintf \
 		-fno-builtin-vsnprintf -fno-builtin-log \
 		-fno-builtin-log2 -fno-builtin-malloc ${NOPIE_FLAGS}
