--- a/src/usr.sbin/rtadvd/rtadvd.conf
+++ b/src/usr.sbin/rtadvd/rtadvd.conf
@@ -1,4 +1,4 @@
-#	$OpenBSD: rtadvd.conf,v 1.6 2008/07/19 10:35:31 reyk Exp $
+#	$OpenBSD: rtadvd.conf,v 1.7 2012/07/08 10:46:00 phessler Exp $
 #	$KAME: rtadvd.conf,v 1.12 2001/01/21 14:56:38 itojun Exp $
 #
 # Note: All of the following parameters have default values defined
@@ -19,4 +19,5 @@
  
 #ef0:\
 #	:addr="2001:db8:ffff:1000::":prefixlen#64:\
+#	:rtprefix="2001:db8:ffff:1001::":\
 #	:rdnss="2001:db8:ffff:1000::1":dnssl="example.com":
