--- a/src/usr.bin/ktrace/Makefile
+++ b/src/usr.bin/ktrace/Makefile
@@ -1,7 +1,10 @@
-#	$OpenBSD: Makefile,v 1.2 1996/06/26 05:34:45 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.3 1996/09/16 10:16:55 downsj Exp $
 
 LDSTATIC=${STATIC}
 PROG=	ktrace
 SRCS=	ktrace.c subr.c
+MAN=	ktrace.1 ltrace.1
+
+LINKS=	${BINDIR}/ktrace ${BINDIR}/ltrace
 
 .include <bsd.prog.mk>
