--- a/src/etc/etc.octeon/Makefile.inc
+++ b/src/etc/etc.octeon/Makefile.inc
@@ -1,4 +1,6 @@
-#	$OpenBSD: Makefile.inc,v 1.1 2013/03/26 17:58:11 jasper Exp $
+#	$OpenBSD: Makefile.inc,v 1.2 2013/03/30 23:00:28 jasper Exp $
+
+KERNELS += GENERIC.MP bsd.mp
 
 bootblocks:
 	# None yet.
