--- a/src/etc/mtree/BSD.x11.dist
+++ b/src/etc/mtree/BSD.x11.dist
@@ -1,4 +1,4 @@
-#       $OpenBSD: BSD.x11.dist,v 1.37 2014/08/25 19:15:42 matthieu Exp $
+#       $OpenBSD: BSD.x11.dist,v 1.38 2015/04/15 07:41:53 jsg Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 .
@@ -417,10 +417,6 @@
                 ..
             ..
         ..
-        share
-            sysmerge
-            ..
-        ..
     ..
     var
         cache
@@ -432,6 +428,8 @@
             ..
         ..
         log
+        ..
+        sysmerge uname=root gname=wheel mode=0700
         ..
     ..
 ..
